reports/T2E1-LAB-quantum-key-distribution-lab.log
Traceback (most recent call last):
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/dkeathley/anaconda3/lib/python3.8/asyncio/base_events.py", line 616, in run_until_complete
    return future.result()
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/dkeathley/anaconda3/lib/python3.8/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
 Laboratory goals


1. Obtain raw key of length > 
2. Obtain sifted key
2.1) what is the fraction of sifted key? ..

3. Error Correction
2.1) what's the erorr rate before and after error correction? [how does this depend on the key size N_K?]
2.2) What's the highest efficiency of your erorr code that you can achieve for final error rate < 10^-10
2.3) 
4. Privacy amplification
4.1) what's the higheest efficiency you can achieve for privacy amplification?
4.2) what's the overall efficiency you were able to achieve from the distilled key? 

* iterate hardware and algorithms to improve efficiencies 

* [how much can passive Eve get?]


*'what are assumptions on Eve .. cycle through'

finite key effects.. e


------------------

[0;36m  Input [0;32mIn [1][0;36m[0m
[0;31m    Laboratory goals[0m
[0m               ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (2430491409.py, line 1)

